Colin - Fix styleguide current-page content on mobile

--- a/src/sass/modules/article-asides.scss
+++ b/src/sass/modules/article-asides.scss
@@ -57,7 +57,7 @@
                     padding: 0 15px 0 15px;
 
                     @media #{$mobile} {
-                        content: '';
+                        content: '\f105';
                         padding-left: 20px;
                     }
                 }
